Fix styling of example blocks in dark mode

--- a/src/supplemental-ui/css/site-extra.css
+++ b/src/supplemental-ui/css/site-extra.css
@@ -125,3 +125,7 @@ code {
 .toc.sidebar .toc-menu h3 {
     padding-left: calc(0.5rem + 2px);
 }
+
+.doc .exampleblock > .content, .doc details.result > .content {
+    background: var(--color-syntax-bg);
+}
